--- a/serverside/.env
+++ b/serverside/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://hotel-booking:anushka123@cluster0.mzrcsid.mongodb.net
+MONGODB_URI=mongodb+srv://hotel-booking:anushka123@cluster0.mzrcsid.mongodb.net/Hotelbookiing?retryWrites=true&w=majority
 
 
 CLERK_PUBLISHABLE_KEY=pk_test_bG95YWwtc3VuYmVhbS0yMC5jbGVyay5hY2NvdW50cy5kZXYk
