--- a/serverside/.env
+++ b/serverside/.env
@@ -4,3 +4,9 @@ MONGODB_URI=mongodb+srv://hotel-booking:anushka123@cluster0.mzrcsid.mongodb.net/
 CLERK_PUBLISHABLE_KEY=pk_test_bG95YWwtc3VuYmVhbS0yMC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_duCZLHdWv3BZ2kTo9VjSO3EPhWKr1eGPHq5Lhj3rz7
 CLERK_WEBHOOK_SECRET=whsec_A3NTT9rnOrcgiNThDFeVbN6e7d4oEEX3
+
+
+//cloudinary
+CLOUDINARY_CLOUD_NAME=ddfvcwkho
+CLOUDNARY_API_KEY=621773444872512
+CLOUDNARY_API_SECRET=-WKU41PYMfl_E9rafYFsqGZhgBg
