--- a/serverside/.env
+++ b/serverside/.env
@@ -7,6 +7,7 @@ CLERK_WEBHOOK_SECRET=whsec_A3NTT9rnOrcgiNThDFeVbN6e7d4oEEX3
 
 
 //cloudinary
+CLOUDINARY_URL=cloudinary://621773444872512:-WKU41PYMfl_E9rafYFsqGZhgBg@ddfvcwkho
 CLOUDINARY_CLOUD_NAME=ddfvcwkho
 CLOUDINARY_API_KEY=621773444872512
 CLOUDINARY_API_SECRET=-WKU41PYMfl_E9rafYFsqGZhgBg
