--- a/serverside/.env
+++ b/serverside/.env
@@ -1,12 +1,10 @@
 MONGODB_URI=mongodb+srv://hotel-booking:anushka123@cluster0.mzrcsid.mongodb.net
 
-
 CLERK_PUBLISHABLE_KEY=pk_test_bG95YWwtc3VuYmVhbS0yMC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_duCZLHdWv3BZ2kTo9VjSO3EPhWKr1eGPHq5Lhj3rz7
 CLERK_WEBHOOK_SECRET=whsec_A3NTT9rnOrcgiNThDFeVbN6e7d4oEEX3
 
-
-//cloudinary
+# Cloudinary
 CLOUDINARY_URL=cloudinary://621773444872512:-WKU41PYMfl_E9rafYFsqGZhgBg@ddfvcwkho
 CLOUDINARY_CLOUD_NAME=ddfvcwkho
 CLOUDINARY_API_KEY=621773444872512
