--- a/serverside/package.json
+++ b/serverside/package.json
@@ -19,11 +19,13 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "svix": "^1.84.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/nodemailer": "^7.0.5",
     "nodemon": "^3.1.11"
   }
 }
