--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_bG95YWwtc3VuYmVhbS0yMC5jbGVyay5hY2NvdW50cy5kZXYk
-VITE_BACKEND_URL=https://hotel-booking-nine-indol.vercel.app/
+VITE_BACKEND_URL=https://hotel-booking-nine-indol.vercel.app
 VITE_CURRENCY= $
